# BabelStudio

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BabelStudio.sln  COMMERCIAL-LICENSE.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  Directory.Build.props  Directory.Packages.props  MILESTONE.md  MODEL_LICENSE_POLICY.md  README.md  THIRD_PARTY_NOTICES.md  benchmark-report-runs.json  benchmark-report.json  package-lock.json  package.json
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: README.md  license-auditor.md  media-pipeline-reviewer.md  schema-engineer.md  (+2 more)
.codex/: README.md
.github/: README.md  pull_request_template.md
assets/: README.md
docs/: MILESTONE.md  README.md  TROUBLESHOOTING.md
packaging/: README.md
reports/: silero-all-variants-bnb4.json  silero-all-variants-default.json  silero-all-variants-fp16.json  silero-all-variants-int8.json  silero-all-variants-q4.json  silero-all-variants-q4f16.json  silero-all-variants-quantized.json  silero-all-variants-uint8.json  silero-all-variants.json  silero-cpu.json  silero-dir.json  silero-dml.json  silero-file.json  silero-manifest-default.json  silero-manifest-q4.json  silero-q4-live.json  silero-relative-dir.json  silero-scope-onnx.json  silero-scope.json
samples/: README.md
src/: README.md
tests/: README.md
tools/marketing/: pyproject.toml  social-preview.html
tools/marketing/babel_studio_marketing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/marketing/scripts/: generate_image.py  screenshot.py
tools/marketing/templates/: social-preview.html
(+405 files in other folders)
